hw-enviornments/k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw-backend
spec:
  selector:
    matchLabels:
      app: hw-backend
  template:
    metadata: 
      labels: 
        app: hw-backend
    spec:
      containers:
      - name: hw-backend
        image: 599908802495.dkr.ecr.us-east-1.amazonaws.com/hello-world-demo-backend
        ports:
          - name: hw-backend
            containerPort: 80
            protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: hw-backend
  labels:
    app: hw-backend
spec:
  type: NodePort
  selector:
    app: hw-backend
  ports:
    - port: 80
